--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+public/assets/*.mp4 filter=lfs diff=lfs merge=lfs -text
 public/assets/Namko[[:space:]]builders[[:space:]]2[[:space:]]with[[:space:]]audio[[:space:]]out.mp4 filter=lfs diff=lfs merge=lfs -text
